--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -23496,7 +23496,7 @@ hr.horizontal.gray-light {
 .navbar-vertical.navbar-expand-xs .navbar-collapse {
   display: block;
   overflow: auto;
-  height: calc(100vh - 360px);
+  height: 85vh;
 }
 
 .navbar-vertical.navbar-expand-xs>[class*="container"] {
